log
vi., 10 de mar. de 2023  9:02:35: 
 tests:  0|7
total_score: 0/70
bad6df7
Sat 11 Mar 2023 06:37:06 AM UTC: 
 tests:  0|7
total_score: 0/70
40cf430
Sat 11 Mar 2023 06:44:14 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f9a1c69
Sat 11 Mar 2023 06:47:10 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|6
total_score: 10/70
47e526d
Sat 11 Mar 2023 06:48:13 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
b7a2cd7
Sat 11 Mar 2023 06:51:28 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:55:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   55 |    strcpy(p.nombre,nombre);
      |            ^
      |            ->
exercises.c:56:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   56 |    strcpy(p.rut,rut);
      |            ^
      |            ->
exercises.c:57:5: error: ‘p’ is a pointer; did you mean to use ‘->’?
   57 |    p.edad = edad;
      |     ^
      |     ->
Compilation failed
3f6e71e
Sat 11 Mar 2023 06:51:42 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
abbcf37
Sat 11 Mar 2023 06:54:46 AM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
63a3c2f
Sat 11 Mar 2023 06:55:00 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
17d6676
Sat 11 Mar 2023 06:55:19 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5d3fe0b
Sat 11 Mar 2023 06:56:34 AM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:77:17: error: assignment to ‘int *’ from incompatible pointer type ‘Vector *’ [-Werror=incompatible-pointer-types]
   77 |   vector1.datos = (Vector *) realloc(vector1.datos, (n+1)*sizeof(Vector));
      |                 ^
exercises.c:80:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   80 |   return vector1;
      |          ^~~~~~~
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1efd69f
